--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         <div class="section-title">
           <h3 class="tituloMenu">Menu</h3>
-          <p>Conocé nuestra carta</p>
+          <p>Conocé nuestros platos recomendados</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -191,7 +191,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Sepia </a><span>$2490</span>
+              <a href="#">Sepia </a>
             </div>
             <div class="menu-ingredients">
               Arenque dinamarqués con crema ácida y eneldo, papas Pontiac, cebollas rojas y tomates Cherry amarillos
@@ -201,7 +201,7 @@
           <div class="col-lg-6 menu-item filter-specialty">
             <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Selipe</a><span>$2000</span>
+              <a href="#">Selipe</a>
             </div>
             <div class="menu-ingredients">
               Langostinos grillados, humita, crocante de maíz y ají panca
@@ -211,7 +211,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Troule</a><span>$2400</span>
+              <a href="#">Troule</a>
             </div>
             <div class="menu-ingredients">
               Burrata acompañada de tomates asados, hojas de rúcula, y aceite de oliva
@@ -221,7 +221,7 @@
           <div class="col-lg-6 menu-item filter-salads">
             <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Bevik</a><span>$3000</span>
+              <a href="#">Bevik</a>
             </div>
             <div class="menu-ingredients">
               Hongos salteados con panceta, huevo pochado, crocante de papa y aceite de trufa
@@ -231,7 +231,7 @@
           <div class="col-lg-6 menu-item filter-specialty">
             <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Griled</a><span>$2000</span>
+              <a href="#">Griled</a>
             </div>
             <div class="menu-ingredients">
               Cabrito de Córdoba acompañado de papines salteados en manteca, cebollines y jugo de cocción
@@ -241,7 +241,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Mozza</a><span>$2000</span>
+              <a href="#">Mozza</a>
             </div>
             <div class="menu-ingredients">
               Burrata acompañado de tomates asados, ensalada de trigo, quínoa y hojas de rúcula
